# llm-based-data-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app  docker-compose.yml  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
data-agent/: .gitignore  Dockerfile  Dockerfile.api  docker-compose.yml  readme  requirements.txt
data-agent/app/: api.py  ui_streamlit.py
data-agent/app/core/: __init__.py  analysis.py  charts.py  config.py  error_utils.py  file_loader.py  history.py  llm_driver  llm_driver.py  logger.py  multi_file.py  postprocess.py  reporting.py  safe_exec.py  storage.py
data-agent/app/services/: __init__.py  report.py  safe_exec.py
deploy/: nginx.conf
docs/: DEVELOPER_SETUP.md  OFFLINE_DOCKER.md  OFFLINE_WINDOWS.md  UI_BEST_PRACTICES.md
frontend/: Dockerfile  index.html  package.json  tsconfig.json
frontend/src/: App.jsx  App.tsx  ChartBuilder.tsx  DatasetSummary.tsx  FileUpload.tsx  HistoryPanel.tsx  InsightCards.tsx  api.ts
tests/: test_analysis.py  test_api.py  test_file_loader.py  test_llm_driver.py  test_multi_file.py  test_safe_exec.py
wheels/: pyproject_fmt-2.6.0-cp39-abi3-win_amd64.whl  toml_fmt_common-1.0.1-py3-none-any.whl
