[project]
name = "data-agent"
version = "0.1.0"
description = "Local data summarization and charting API"
requires-python = ">=3.11"
authors = [
    {name = "Data Agent", email = "noreply@example.com"}
]
dependencies = [
    "pandas>=2.2",
    "matplotlib>=3.9",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "reportlab>=4.0",
    "python-pptx>=0.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "requests>=2.32"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "isort",
    "mypy",
    "pyproject-fmt",
    "pytest"
]

[tool.mypy]
python_version = "3.11"
files = ["data-agent/app/core"]
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 88

[tool.isort]
profile = "black"
